[gd_scene load_steps=8 format=3 uid="uid://w25wdeyvlw5o"]

[ext_resource type="Script" path="res://enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bkkv2viimonyf" path="res://ASSETS/enemies/slimeBlue.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dj20dfhq16y84" path="res://ASSETS/enemies/slimeBlue_blue.png" id="3"]
[ext_resource type="Texture2D" uid="uid://uvq7op4el04b" path="res://ASSETS/enemies/slimeBlue_squashed.png" id="4"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"crawl",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"squashed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(23.6452, 11.7478)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(17.6599, 4.65887)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 2147483683
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("1")
animation = &"crawl"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.00101, 5.08045)
shape = SubResource("2")

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2(0, -0.006)
target_position = Vector2(0, 20)
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2(0, -11.9164)
shape = SubResource("3")

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
